Bug/jenkins 43861 input param modal grows too wide (#175)
* for dialogs with the Dialog--medium-size clss, make them have a max-width of 464px

* publish beta version of jdl

* tick up jdl version

* tick up jdl version

--- a/less/components/popups.less
+++ b/less/components/popups.less
@@ -94,6 +94,10 @@
 .Dialog-content-scroll {
     overflow: auto;
     flex-shrink: 1;
+    
+    .Dialog--medium-size & {
+        max-width: 464px; 
+    }
 }
 
 .Dialog-content-margin {
